--- a/src/components/Content/style.css
+++ b/src/components/Content/style.css
@@ -56,8 +56,8 @@ p {
     width: 300px !important;
     border: solid 6px white;
     position: relative;
-    bottom: 5em;
-    left: 18em;
+    bottom: 150px;
+    left: 17.5em;
   }
 
   .card-image:hover {
@@ -78,7 +78,7 @@ p {
     font-size: 2em;
     padding: 1em;
     position: relative;
-    top: 9.5em;
+    top: 250px;
     right: 2.5em;
   }
 
