--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   width: 100%;
   display: inline-block;
   font-family: 'Russo One', sans-serif;
-  font-size: 4.5em;
+  font-size: 5em;
   background-color: #8c94ff;
   background-image: linear-gradient(
     -75deg,
@@ -77,6 +77,10 @@ input {
   padding: 0.2em;
   color: #06142f;
   text-align: center;
+}
+
+input:hover {
+  cursor: pointer;
 }
 
 p {
