--- a/src/components/Content/style.css
+++ b/src/components/Content/style.css
@@ -1,90 +1,68 @@
 /* Card styling */
-.card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.card-div {
+  font-family: 'Abel', sans-serif;
+  width: 650px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card-image {
-  height: 400px !important;
-  width: 400px !important;
-  border: solid 8px white;
+  height: 600px !important;
+  width: 600px !important;
   position: relative;
-  bottom: 2em;
-  transition: border-width 0.6s linear;
-  border: 8px solid rgb(255, 255, 255);
+  bottom: 5.5em;
+  box-shadow: 12px 12px 16px 0 rgba(0, 0, 0, 0.2),
+    -8px -8px 12px 0 rgba(255, 255, 255, 0.2);
 }
 
 .card-image:hover {
   cursor: pointer;
-  -webkit-box-shadow: 0 0 20px rgb(255, 255, 255);
-  -moz-box-shadow: 0 0 20px rgb(51, 33, 151);
+  opacity: .8;
 }
 
 .card-title {
-  width: 500px;
-  font-size: 1em;
-  color: white;
-}
-
-.card-content {
-  font-family: 'Abel', sans-serif;
-  font-size: 1.6em;
-  display: inline-block;
-  padding: 1.5em;
   position: relative;
-  bottom: 1.5em;
+  bottom: 2.8em;
+  font-size: 1.8em;
+  color: white;
 }
 
 p {
-  width: 500px;
-  font-size: 0.6em;
+  font-size: 1em;
   color: white;
+  position: relative;
+  bottom: 6em;
 }
 
+/* Class to hide content on load */
+.hidden {
+  display: none;
+}
+
+/* Media Queries */
 @media (max-width: 650px) {
   .card {
-    max-width: 350px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    max-width: 350px!important;
   }
 
   .card-image {
     height: 260px !important;
     width: 260px !important;
-    border: solid 5px white;
-    position: relative;
-    bottom: 7em;
-    left: 14.5em;
-  }
-
-  .card-image:hover {
-    opacity: 0.7;
-    cursor: pointer;
+    position: relative; 
+    bottom: 2.8em;
+    left: 1.8em;
   }
 
   .card-title {
-    max-width: 350px;
-    font-size: 1em;
-    color: white;
-  }
-
-  .card-content {
-    max-width: 350px;
-    font-family: 'Abel', sans-serif;
-    font-size: 2em;
-    padding: 1em;
-    top: 10em;
-    right: 3.5em;
+    font-size: 1.2em;
+    position: relative;
+    left: 1.2em;
   }
 
   p {
-    width: 350px;
     font-size: 0.5em;
     color: white;
-    padding: 1em;
     position: relative;
-    right: 1em;
+    left: 2em;
   }
 }
